--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -8,12 +8,11 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
-<div style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between;">
-	<div style="width: 50%; padding-right: 10px;">
-	
+<div class="portada-columnas">
+	<div class="portada-columna portada-columna-izq">
 		@if (juegosMinimosMostrar.Count > 0)
 		{
-			<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
+			<div style="font-size: 20px; padding-bottom: 10px; padding-left: 20px;">
 				@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastLows")
 			</div>
 
@@ -53,7 +52,7 @@
 
 		@if (juegosAñadidosMostrar.Count > 0)
 		{
-			<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
+			<div style="font-size: 20px; padding-bottom: 10px; padding-left: 20px;">
 				@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastAdded")
 			</div>
 
@@ -92,11 +91,17 @@
 		
 	</div>
 
-	<div style="width: 50%; padding-left: 10px;">
+	<div class="portada-columna portada-columna-der">
 		@if (noticiasMostrar.Count > 0)
 		{
-			<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNews")
+			<div style="display: flex; align-items: center; width: 100%; margin-bottom: 10px; padding-left: 20px; padding-right: 20px;">
+				<div style="width: 80%; font-size: 20px; text-align: left;">
+					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNews")
+				</div>
+
+				<div style="width: 20%; font-size: 19px; text-align: right;">
+					<a href="@Herramientas.Idiomas.CogerRSS(idioma)" target="_blank"><i class="fa-solid fa-rss"></i></a>
+				</div>
 			</div>
 
 			<div class="perfil" style="padding: 15px 20px;">
