--- a/pepeizqs deals web/Pages/LastNews.cshtml
+++ b/pepeizqs deals web/Pages/LastNews.cshtml
@@ -6,8 +6,14 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<div style="font-size: 23px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "LastNews.Title")
+<div style="display: flex; align-items: center; width: 100%;">
+	<div style="width: 80%; font-size: 23px; text-align: left;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "LastNews.Title")
+	</div>
+
+	<div style="width: 20%; font-size: 20px; text-align: right;">
+		<a href="@Herramientas.Idiomas.CogerRSS(Model.idioma)" target="_blank"><i class="fa-solid fa-rss"></i></a>
+	</div>
 </div>
 
 @(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
