--- a/pepeizqs deals web/Pages/Admin/Tiendas.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Tiendas.cshtml
@@ -16,7 +16,7 @@
 {
 	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
 	{
-        Hangfire.RecurringJob.AddOrUpdate<Herramientas.ITareasGestionador>(job => job.HacerTarea(), Hangfire.Cron.Hourly());
+		Hangfire.RecurringJob.AddOrUpdate<Herramientas.ITareasGestionador>(job => job.HacerTarea(), Hangfire.Cron.MinuteInterval(30));
 
 		@(await Html.RenderComponentAsync<Componentes.Admin.Tiendas>(RenderMode.ServerPrerendered))
 	}
