--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.VisualBasic;
 
 @if (noticiasMostrar.Count > 0)
 {
@@ -22,7 +23,7 @@
 			<div class="perfil" style="width: 80%;">
 				<div style="font-size: 20px; margin-bottom: 15px;">@Herramientas.Idiomas.MirarTexto(idioma, noticiasMostrar[i].TituloEn, noticiasMostrar[i].TituloEs)</div>
 
-				<div>@((MarkupString)@Herramientas.Idiomas.MirarTexto(idioma, noticiasMostrar[i].ContenidoEn, noticiasMostrar[i].ContenidoEs))</div>
+				<div>@((MarkupString)@Contenido(noticiasMostrar[i]))</div>
 
 				<div style="text-align: right;">
 					<a href="/news/@noticiasMostrar[i].Id"><i class="fa-solid fa-plus"></i></a>
@@ -74,5 +75,17 @@
 		fechaTexto = fechaDate.Day.ToString() + "/" + fechaDate.Month.ToString() + "/" + fechaDate.Year.ToString();
 
 		return fechaTexto;
+	}
+
+	private string Contenido(Noticias.Noticia noticiaMostrar)
+	{
+		string contenido = Herramientas.Idiomas.MirarTexto(idioma, noticiaMostrar.ContenidoEn, noticiaMostrar.ContenidoEs);
+
+		if (contenido != null)
+		{
+			contenido = contenido.Replace("<img ", "<img style=" + Strings.ChrW(34) + "max-width: 100%; margin-top: 20px; margin-bottom: 20px;" + Strings.ChrW(34)) + " ";
+		}
+
+		return contenido;
 	}
 }
