--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -30,7 +30,7 @@
 		@if (juegosMinimosMostrar.Count > 0)
 		{
 			<div style="font-size: 20px; padding-bottom: 10px; padding-left: 20px;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastLows")
+				<a href="/historicallow" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastLows")</a>
 			</div>
 
 			<div class="perfil" style="padding: 15px 20px;">
@@ -70,7 +70,7 @@
 		@if (juegosAñadidosMostrar.Count > 0)
 		{
 			<div style="font-size: 20px; padding-bottom: 10px; padding-left: 20px;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastAdded")
+				<a href="/lastadded" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastAdded")</a>
 			</div>
 
 			<div class="perfil" style="padding: 15px 20px;">
@@ -113,7 +113,7 @@
 		{
 			<div style="display: flex; align-items: center; width: 100%; margin-bottom: 10px; padding-left: 20px; padding-right: 20px;">
 				<div style="width: 80%; font-size: 20px; text-align: left;">
-					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNews")
+					<a href="/lastnews" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNews")</a>
 				</div>
 
 				<div style="width: 20%; font-size: 19px; text-align: right;">
