--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -59,9 +59,11 @@
 					</div>
 				}
 
-				<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/historicallow">
-					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastLowsMore")
-				</a>
+				<div style="display: flex; justify-content: center; align-items: center;align-items: center;">
+					<a class="boton-pequeño" style="width: auto; padding: 15px 20px; margin-top: 30px; margin-bottom: 15px;" href="/historicallow">
+						<i class="fa-solid fa-plus" style="margin-right: 15px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastLowsMore")
+					</a>
+				</div>
 			</div>
 		}
 
@@ -100,9 +102,11 @@
 					</div>
 				}
 
-				<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/lastadded">					
-					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastAddedMore")
-				</a>
+				<div style="display: flex; justify-content: center; align-items: center;align-items: center;">
+					<a class="boton-pequeño" style="width: auto; padding: 15px 20px; margin-top: 30px; margin-bottom: 15px;" href="/lastadded">
+						<i class="fa-solid fa-plus" style="margin-right: 15px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastAddedMore")
+					</a>
+				</div>
 			</div>
 		}
 		
@@ -139,9 +143,19 @@
 					</div>
 				}
 
-				<a class="boton-pequeño" style="padding: 15px 20px; margin-top: 20px; margin-bottom: 5px;" href="/lastnews">
-					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsMore")
-				</a>
+				<div style="display: flex; justify-content: center; align-items: center;align-items: center;">
+					<a class="boton-pequeño" style="width: auto; padding: 15px 20px; margin-top: 30px;" href="/lastnews">
+						<i class="fa-solid fa-plus" style="margin-right: 15px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsMore")
+					</a>				
+				</div>
+
+				<div style="text-align: center; margin-top: 40px;">
+					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsFollow")
+
+					<div style="font-size: 25px; text-align: center; margin-top: 10px;">
+						<a href="https://discord.gg/GBT3FXnrm3" target="_blank"><i class="fa-brands fa-discord"></i></a>
+					</div>
+				</div>
 			</div>
 		}
 	</div>
