--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
         <div class="container">
             <div style="display: flex; align-items: center;">
                 <div style="width: 80%; text-align: left;">
-                    &copy; 2018 - @DateTime.Now.Year.ToString() • pepeizq's deals • <a asp-page="/Privacy" class="texto-pie">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Privacy")</a>
+                    &copy; @DateTime.Now.Year.ToString() • <a href="https://pepeizqapps.com/" class="texto-pie" target="_blank">pepeizq's apps</a> • pepeizq's deals • <a asp-page="/Privacy" class="texto-pie">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Privacy")</a>
                 </div>
 
                 <div style="width: 20%; text-align: right;">
