--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -593,8 +593,13 @@
 
 	private void BundleGenerarTitulo(Bundles2.Bundle bundle)
 	{
-		tituloEn = string.Format(Herramientas.Idiomas.CogerCadena("en-US", "News.BundleString1"), bundle.NombreBundle, bundle.NombreTienda);
-		tituloEs = string.Format(Herramientas.Idiomas.CogerCadena("es-ES", "News.BundleString1"), bundle.NombreBundle, bundle.NombreTienda);
+		string nombreBundle = bundle.NombreBundle;
+
+		nombreBundle = nombreBundle.Replace(" bundle", null);
+		nombreBundle = nombreBundle.Replace(" Bundle", null);
+
+		tituloEn = string.Format(Herramientas.Idiomas.CogerCadena("en-US", "News.BundleString1"), nombreBundle, bundle.NombreTienda);
+		tituloEs = string.Format(Herramientas.Idiomas.CogerCadena("es-ES", "News.BundleString1"), nombreBundle, bundle.NombreTienda);
 	}
 
 	private void BundleGenerarContenido(Bundles2.Bundle bundle)
@@ -637,8 +642,8 @@
 				precio = precio.Replace(".", ",");
 				precio = precio + "€";
 
-				contenidoEn = contenidoEn + "<div style=" + Strings.ChrW(34) + "margin-bottom: 15px;" + Strings.ChrW(34) + ">" + tier.CantidadJuegos.ToString() + " " + Herramientas.Idiomas.CogerCadena("en-US", "News.BundleString4") + " (" + precio + ")";
-				contenidoEs = contenidoEs + "<div style=" + Strings.ChrW(34) + "margin-bottom: 15px;" + Strings.ChrW(34) + ">" + tier.CantidadJuegos.ToString() + " " + Herramientas.Idiomas.CogerCadena("es-ES", "News.BundleString4") + " (" + precio + ")";
+				contenidoEn = contenidoEn + "<div style=" + Strings.ChrW(34) + "margin-bottom: 15px;" + Strings.ChrW(34) + ">" + tier.CantidadJuegos.ToString() + " " + Herramientas.Idiomas.CogerCadena("en-US", "News.BundleString4") + " (" + precio + ")</div>";
+				contenidoEs = contenidoEs + "<div style=" + Strings.ChrW(34) + "margin-bottom: 15px;" + Strings.ChrW(34) + ">" + tier.CantidadJuegos.ToString() + " " + Herramientas.Idiomas.CogerCadena("es-ES", "News.BundleString4") + " (" + precio + ")</div>";
 			}
 
 			contenidoEn = contenidoEn + "<div><ul>";
