--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -68,11 +68,11 @@
 					@Herramientas.Idiomas.CogerCadena(Model.idioma, "News.String5")
 				</div>
 
-				<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 20px;">
+				<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
 					@foreach (var juego in Model.juegos)
 					{
-						<div style="max-width: 200px;">
-							<a href="game/@juego.Id" class="boton-pequeño" style="padding: 10px;">
+						<div style="min-width: 150px; max-width: 200px;">
+							<a href="game/@juego.Id" class="boton-pequeño" style="padding: 8px;">
 								<div>
 									<img src="@juego.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" />
 								</div>
