--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -125,10 +125,10 @@
 				</div>
 			</div>
 
-			<div class="perfil" style="padding: 15px 20px;">
+			<div class="perfil" style="padding: 15px;">
 				@foreach (var noticia in noticiasMostrar)
 				{
-					<div class="perfil-flexible-centrado" style="margin-top: 10px;">
+					<div class="perfil-flexible-centrado" style="margin-top: 15px;">
 						<a class="boton-pequeño" style="padding: 20px;" href="/news/@noticia.Id">
 							<div class="perfil-flexible-centrado">
 								<div style="width: 80%;">
@@ -149,11 +149,22 @@
 					</a>				
 				</div>
 
-				<div style="text-align: center; margin-top: 40px;">
+				<div style="text-align: center; margin-top: 40px; margin-bottom: 10px;">
 					@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsFollow")
 
-					<div style="font-size: 25px; text-align: center; margin-top: 10px;">
-						<a href="https://discord.gg/GBT3FXnrm3" target="_blank"><i class="fa-brands fa-discord"></i></a>
+					<div style="display: flex; align-items: center; justify-content: center; font-size: 25px; text-align: center; margin-top: 10px;">
+						<div style="margin-left: 6px; margin-right: 6px;">
+							<a href="https://discord.gg/GBT3FXnrm3" target="_blank"><i class="fa-brands fa-discord"></i></a>
+						</div>
+						<div style="margin-left: 6px; margin-right: 6px;">
+							<a href="https://t.me/pepeizqdeals2" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+						</div>
+						<div style="margin-left: 6px; margin-right: 6px;">
+							<a href="https://reddit.com/r/pepeizqdeals/" target="_blank"><i class="fa-brands fa-reddit"></i></a>
+						</div>
+						<div style="margin-left: 6px; margin-right: 6px;">
+							<a href="https://twitter.com/pepeizqdeals" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
