--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -125,7 +125,7 @@
 				</div>
 			</div>
 
-			<div class="perfil" style="padding: 15px;">
+			<div class="perfil" style="padding: 10px 15px;">
 				@foreach (var noticia in noticiasMostrar)
 				{
 					<div class="perfil-flexible-centrado" style="margin-top: 15px;">
@@ -164,6 +164,9 @@
 						</div>
 						<div style="margin-left: 6px; margin-right: 6px;">
 							<a href="https://twitter.com/pepeizqdeals" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+						</div>
+						<div style="margin-left: 6px; margin-right: 6px;">
+							<a href="https://steamcommunity.com/groups/pepeizqdeals/" target="_blank"><i class="fa-brands fa-steam"></i></a>
 						</div>
 					</div>
 				</div>
